--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@ionic/angular": "^4.6.0",
     "id3-parser": "^2.0.0",
     "ngx-cookie-service": "^2.2.0",
     "rxjs": "~6.4.0",
